<resources>
    <string name="app_name">wound_fairy</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="my_reservation">My Reservations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone Number</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy</string>
    <string name="contact_us">Contact us</string>
    <string name="wait">Wait</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="field_required">field required</string>
    <string name="inv_email">invaled email</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="no_blogs_to_show">No Blogs to show</string>
    <string name="sorry">Sorry !</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="map_key" />
    <string name="filter">Filter</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="price2">Price: </string>
    <string name="show_results">Show results</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="book_now">Book now</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="cahnge">Change</string>
    <string name="show">Show</string>
    <string name="no_search_result">No search result</string>
    <string name="offers">Offers</string>
    <string name="change">Change</string>
    <string name="cnt_book">You cannot book now</string>
    <string name="choose_language">Change language</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="country_code">Country Code</string>
    <string name="we_sent_an_code_to_verify_your_phone">We sent an code to verify your phone</string>
    <string name="user_name">User Name</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="language">Language</string>
    <string name="share_app">Share App</string>
    <string name="blogs">Blogs</string>
    <string name="market">Market</string>
    <string name="online_consultation">Online  \n Consultation</string>
    <string name="determine_a_home_visit">Determine a \n home visit</string>
    <string name="descover_our">Discover Our</string>
    <string name="market1">MARKET</string>
    <string name="services">Services</string>
    <string name="latest_blogs">Latest Blogs</string>
    <string name="see_all">See All</string>
    <string name="em_exist">email already exists</string>
    <string name="my_orders">My Orders</string>
    <string name="follow_us">Follow US</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chat">Chat</string>
    <string name="request">Request</string>
    <string name="request_service">Request Service</string>
    <string name="egp">EGP</string>
    <string name="share_with">Share with :</string>
    <string name="blog_details">Blog Details</string>
    <string name="specifications">Specifications</string>
    <string name="buy">Buy</string>
    <string name="write_your_complaint">Write your complaint</string>
    <string name="write_here">write here ...</string>
    <string name="upload_test_images">Upload test images</string>
    <string name="select_the_service">select the service</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="location2">Location:</string>
    <string name="current_location">Current location</string>
    <string name="choose_service">Choose service</string>
    <string name="choose_product">Choose product</string>
    <string name="field_req">Field required</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="your_complaint">Your Complaint:</string>
    <string name="test_images">Test Images:</string>
    <string name="the_service">The Service:</string>
    <string name="visit_time">Visit Time:</string>
    <string name="note">Note</string>
    <string name="note2">Note:</string>
    <string name="total_price">Total Price :</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="succ">Success</string>
    <string name="under_review">Under Review</string>
    <string name="approved">Approved</string>
    <string name="canceled">Canceled</string>
    <string name="done">Done</string>
    <string name="fields_are_not_required">* Fields are not required</string>
    <string name="type_a_message">Type Here</string>
    <string name="ordered">Ordered: </string>
    <string name="reservation_time">Reservation Time: </string>
    <string name="reservation_status">Reservation Status</string>
    <string name="payment">Payment</string>
    <string name="you_must_pay_to_start_chatting_service_cost">You must pay to start chatting \n Service cost</string>
    <string name="go_to_payment">Go To Payment</string>
    <string name="edit">Edit</string>
    <string name="reservationDetails">Reservation Details</string>
    <string name="orderDetails">Order Details</string>
    <string name="not_avail_now">Not Available Now</string>
    <string name="payment_faild">Payment Failed</string>
    <string name="payment_suc">Payment Success</string>

</resources>